--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -55,7 +55,7 @@ jobs:
         run: |
           echo "Release ${{ github.ref_name }}"
           gh release create "${{ github.ref_name }}" \
-            --prerelease \
+            --draft \
             --notes "${{ needs.generate-changelog.outputs.release-body }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
